# vsclaude

./: .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  .prettierrc.json  BUILD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  ROADMAP.md  SECURITY.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.base.json  tsconfig.json  vitest.workspace.ts
.changeset/: README.md  config.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  desktop-release.yml  release.yml
apps/desktop/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/desktop/.storybook/: preview.tsx
apps/desktop/e2e/: app.spec.ts
apps/desktop/src/: App.tsx  demo-events.ts  ipc.ts  main.tsx  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: fs_ops.rs  git.rs  lib.rs  main.rs  provider.rs  pty.rs  search.rs  secrets.rs
apps/desktop/src/__tests__/: a11y-help.test.ts  active-file.test.ts  activity-view.test.ts  breadcrumbs.test.ts  colors.test.ts  command-title.test.ts  conflicts.test.ts  editor-bridge.test.ts  editor-commands.test.ts  eol.test.ts  excludes.test.ts  file-icons.test.ts  hex.test.ts  inlay-hints.test.ts  json-schemas.test.ts  keybinding-conflicts.test.ts  language.test.ts  languages.test.ts  layout-state.test.ts  links.test.ts  markdown-links.test.ts  markdown.test.ts  media.test.ts  menus.test.ts  monaco-base-theme.test.ts  motion-lite.test.ts  nav-history.test.ts  notifications.test.ts  on-save.test.ts  output-log.test.ts  (+25 more)
docs/: agent-actions.md  architecture-overview.md  faq.md  getting-started.md  pixie-states.md
scripts/: gen-action-icons.mjs  gen-actions-doc.mjs  gen-icon.py
specs/: ACCESSIBILITY.md  AGENT_EVENT_SCHEMA.md  ARCHITECTURE.md  BUILD_AND_DISTRIBUTION.md  CHAT_AND_INTERACTION_SPEC.md  CI_PIPELINE.md  CONTEXT_AND_CHECKPOINTS.md  COST_AND_TOKENS_SPEC.md  DESIGN_SYSTEM.md  EDITOR_SPEC.md  FEATURE_MATRIX.md  GIT_SPEC.md  MASCOT_SYSTEM.md  MCP_AND_TOOLS_SPEC.md  ONBOARDING_AND_DELIGHT.md  PERFORMANCE_BUDGETS.md  PERMISSIONS_AND_SAFETY.md  PLUGIN_SDK.md  PROBLEMS_AND_DIAGNOSTICS.md  PROVIDERS_SPEC.md  QUICK_OPEN.md  SEARCH.md  SECURITY.md  SESSIONS_SPEC.md  SETTINGS_THEMES_PERSISTENCE.md  SOUND_DESIGN.md  SOURCE_CONTROL.md  STATUS_BAR.md  SWARM_SPEC.md  TECH_STACK.md  TERMINAL_SPEC.md  TESTING_STRATEGY.md  VISION.md  WORKSPACE_AND_FILES.md
(+131 files in other folders)
