[package]
name = "vsclaude"
version = "0.1.0"
description = "The vsclaude desktop core: process lifecycle, PTY, filesystem, and secure secret storage."
authors = ["Anwar Debes"]
license = "MIT"
repository = "https://github.com/AnwarDebes/vsclaude"
edition = "2021"
rust-version = "1.77"

# The Tauri app is a library plus a thin binary so it can be embedded by the
# mobile targets later. The desktop binary lives in src/main.rs.
[lib]
name = "vsclaude_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
portable-pty = "0.8"
# Live filesystem watching for the explorer and open buffers (Phase A1).
notify = "8"
notify-debouncer-full = "0.5"
# Deletes go to the OS recycle bin so they stay recoverable.
trash = "5"
# Project-wide search, built on the same libraries ripgrep is: gitignore-aware
# walking and a fast regex matcher. No runtime dependency on an external binary.
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"

[features]
# Used by the production bundle.
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
# Thin LTO keeps the binary small and optimized while building reliably and in
# parallel. Fat LTO with a single codegen unit can take hours on the full Tauri
# dependency tree; thin gives nearly the same result far more dependably.
lto = "thin"
opt-level = "s"
strip = true
